adapt margin under experience-item-icons when screen is small, correct white space when switching from flex direction to column on resize

--- a/src/App.scss
+++ b/src/App.scss
@@ -321,6 +321,7 @@ footer, nav, .main-section, .left-margin, .right-margin {
 
   .about-me-subsection {
     flex-direction: column;
+    display: block;
   }
   
   .experience-subsection {
@@ -340,6 +341,7 @@ footer, nav, .main-section, .left-margin, .right-margin {
   
   .experience-item-icons {
     flex-direction: column;
+    margin-bottom: 15px;
   }
 }
 
